--- a/css/quillEditor.css
+++ b/css/quillEditor.css
@@ -1,3 +1,13 @@
 #editor {
     min-height: 500px;
 }
+.draggable {
+    position: absolute;
+    cursor: move;
+}
+#element_toolbar button{
+    min-width: 100px;
+    border-radius: 10px;
+    border: 1px solid black;
+    line-height: 1.5em;
+}
