--- a/real/style.css
+++ b/real/style.css
@@ -293,3 +293,8 @@ input:checked + .slider:before {
   .tag:hover {
 	background-color: #dcedc8; /* 마우스 오버 시 색상 변화 */
   }
+
+  .tr .td .span {
+    width: 100%;
+    height: 100%;
+  }
